--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 group = 'com.xxma'
-version = '1.0.0'
+version = '1.1.0'
 
 sourceCompatibility = '1.8'
 targetCompatibility = '1.8'
@@ -22,14 +22,24 @@ repositories {
         name = 'spongepowered-repo'
         url = 'https://repo.spongepowered.org/maven'
     }
+    maven {
+        name = 'sonatype'
+        url = 'https://oss.sonatype.org/content/repositories/snapshots'
+    }
 }
 
 dependencies {
+    compile 'net.kyori:adventure-text-minimessage:4.1.0-SNAPSHOT'
     compileOnly 'com.velocitypowered:velocity-api:1.1.8'
     annotationProcessor 'com.velocitypowered:velocity-api:1.1.8'
 }
 
 import org.apache.tools.ant.filters.ReplaceTokens
+
+jar {
+    from configurations.compile.collect {zipTree it}
+    manifest.attributes "Main-Class": "com.xxma.forcepacks.ForcePacks"
+}
 
 task processSources(type: Sync) {
     from sourceSets.main.java.srcDirs
